Documentaries Styles Update

--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -30,7 +30,7 @@
             <div class="favourites">
                 <img src="images/favourite1.png" class="fav1"/>
                 <img src="images/favourite2.png" class="fav2" onclick="location.href='videoPage2.html'" style="cursor: pointer;"/>
-                <img src="images/favourite3.png" class="fav3"/>
+                <img src="images/favourite3.png" class="fav3" class="fav2" onclick="location.href='videoPage3.html'" style="cursor: pointer;"/>
                 <img src="images/favourite4.png" class="fav4"/>
                 <img src="images/favourite5.png" class="fav5" onclick="location.href='videoPage.html'" style="cursor: pointer;"/>
             </div>
