Updating enVisionDocumentaries Main Page

--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -26,13 +26,13 @@
                     <input type="text" name="query" placeholder="Search...">
                 </form>
             </div>
-            <h1 class="title"> Your Favourites </h1>
+            <h1 class="hero-title"> Your Favourites </h1>
             <div class="favourites">
-                <img src="images/favourite1.png" class="fav1"/>
+                <img src="images/favourite1.png" class="fav1" onclick="location.href='videoPage1.html'" style="cursor: pointer;"/>
                 <img src="images/favourite2.png" class="fav2" onclick="location.href='videoPage2.html'" style="cursor: pointer;"/>
-                <img src="images/favourite3.png" class="fav3" class="fav2" onclick="location.href='videoPage3.html'" style="cursor: pointer;"/>
-                <img src="images/favourite4.png" class="fav4"/>
-                <img src="images/favourite5.png" class="fav5" onclick="location.href='videoPage.html'" style="cursor: pointer;"/>
+                <img src="images/favourite3.png" class="fav3" onclick="location.href='videoPage3.html'" style="cursor: pointer;"/>
+                <img src="images/favourite4.png" class="fav4" onclick="location.href='videoPage4.html'" style="cursor: pointer;"/>
+                <img src="images/favourite5.png" class="fav5" onclick="location.href='videoPage5.html'" style="cursor: pointer;"/>
             </div>
        </header>
 
@@ -45,19 +45,19 @@
 
        <section class="allContent">
             <div class="views">
-                <h3> Most Views </h3>
+                <h4> Most Views </h4>
                 <div class="viewsImages">
-                    <img src="images/views1.png" class="views1"/>
-                    <img src="images/views2.png" class="views2"/>
-                    <img src="images/views3.png" class="views3"/>
+                    <img src="images/views1.png" class="views1" onclick="location.href='videoPage6.html'" style="cursor: pointer;"/>
+                    <img src="images/views2.png" class="views2" onclick="location.href='videoPage7.html'" style="cursor: pointer;"/>
+                    <img src="images/views3.png" class="views3" onclick="location.href='videoPage8.html'" style="cursor: pointer;"/>
                 </div>
             </div>
             <div class="rates">
-                <h3> Highest Rates </h3>
+                <h4> Highest Rates </h4>
                 <div class="ratesImages">
-                    <img src="images/rates1.png" class="rates1"/>
-                    <img src="images/rates2.png" class="rates2"/>
-                    <img src="images/rates3.png" class="rates3"/>
+                    <img src="images/rates1.png" class="rates1" onclick="location.href='videoPage9.html'" style="cursor: pointer;"/>
+                    <img src="images/rates2.png" class="rates2" onclick="location.href='videoPage10.html'" style="cursor: pointer;"/>
+                    <img src="images/rates3.png" class="rates3" onclick="location.href='videoPage11.html'" style="cursor: pointer;"/>
                 </div>
             </div>
 
