--- a/enVision-Documentaries/videoPage3.html
+++ b/enVision-Documentaries/videoPage3.html
@@ -45,7 +45,7 @@
                                 allowfullscreen>
                         </iframe>
                         <h1 class="title">
-                            Museum of Progress: Photography Timeline 
+                            Museum of Progress: Videography Timeline 
                         </h1>
                     </div>
                 </div>
@@ -64,9 +64,9 @@
                     </div>
                     <div class="info-description">
                         <h3>
-                            The Museum of Progress: Photography Timeline showcases the evolution of photography, from its earliest experiments to today’s digital era.<br>
+                            The Museum of Progress: Videography Timeline traces the journey of moving images—from the first motion experiments to today’s immersive digital cinema.<br>
                             <br>
-                             It highlights key inventions, iconic images, and the cultural impact of photography across time.
+                            It showcases groundbreaking technologies, influential filmmakers, and the cultural transformation driven by the art of capturing motion over time.
                         </h3>
                     </div>
                 </div>
