Updating videPage to VideoPage1

--- a/enVision-Documentaries/videoPage1.html
+++ b/enVision-Documentaries/videoPage1.html
@@ -38,14 +38,14 @@
                         <iframe class="vid" 
                                 width="640" 
                                 height="360" 
-                            src="https://www.youtube.com/embed/3E3HRQWFJJM" 
+                            src="https://www.youtube.com/embed/GARh8N8Ji2s" 
                                 title="Quick Statistics Video" 
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen>
                         </iframe>
                         <h1 class="title">
-                            Statistics Of World Cup
+                           Tourism Around The World Overview
                         </h1>
                     </div>
                 </div>
@@ -64,9 +64,9 @@
                     </div>
                     <div class="info-description">
                         <h3>
-                            This section showcases key World Cup statistics through clear visuals and comparisons.<br>
+                            The Overview of Tourism Around the World explores how travel connects cultures, drives economies, and shapes global experiences.<br>
                             <br>
-                            It highlights team performances, player achievements, and historic tournament milestones.
+                            It highlights top destinations, emerging trends, and the ways tourism continues to evolve in the modern era.
                         </h3>
                     </div>
                 </div>
