Documentaries: Margin & About Page

--- a/enVision-Documentaries/about.html
+++ b/enVision-Documentaries/about.html
@@ -25,30 +25,30 @@
                     <input type="text" name="query" placeholder="Search...">
                 </form>
             </div>
-            <h1 class="title"> About </h1>
+            <h1 class="hero-title"> About </h1>
             <div class="hero">
-              <h3> Ideation </h3>
-              <p>
+              <h4> Ideation </h4>
+              <p class="ideation-text">
                 It started as a idea for my passion for knowledge to create a platform for people to use and participate. Even though there are some options for users, I wanted to create my own design and to develop the unique experience that I have been still improving continueously
               </p>
             </div>
        </header>
        <section class="all">
           <div class="magaz"> 
-            <h3> Digital Magazine </h3>
+            <h4> Digital Magazine </h4>
             <p>
              My first idea was to contribute in digital magazine for written articles that reflect the research and knowledge, as well as to expanded for other contributers <br>
             </p> 
           </div>
           <div class="bottom">
             <div class="stats">
-              <h3> Statistics </h3>
+              <h4> Statistics </h4>
               <p>
                 I wanted to create statistics website, and I like to show it in visual interactive way for users. My idea was to show it on map to make it more informative and entertaining
               </p>
             </div>
             <div class="doc">
-              <h3> Documentaries Films </h3>
+              <h4> Documentaries Films </h4>
               <p>
                 The third idea was to have website that specializes in short documentaries films. Then to make users to contribte in this project. Then to expand it to bigger one
               </p>
