Loading Interactives and Articles

--- a/enVision-Magazine/arts2.html
+++ b/enVision-Magazine/arts2.html
@@ -128,7 +128,7 @@
 
 <!-- Footer -->
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { initializeApp, getApps, getApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getFirestore, collection, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 // --- Firebase config ---
@@ -142,7 +142,13 @@ const firebaseConfig = {
   measurementId: "G-3NB50YD8F0"
 };
 
-const app = initializeApp(firebaseConfig);
+// ===== Initialize Firebase =====
+  let app;
+  if (!getApps().length) {
+    app = initializeApp(firebaseConfig);
+  } else {
+    app = getApp(); // reuse existing app
+  }
 const db = getFirestore(app);
 
 // --- DOM elements ---
