--- a/enVision-Magazine/mathematics2.html
+++ b/enVision-Magazine/mathematics2.html
@@ -129,7 +129,7 @@
 <!-- Footer -->
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
+import { initializeApp, getApps, getApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
 import { getFirestore, collection, getDocs, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
 // --- Firebase config ---
@@ -143,7 +143,12 @@ const firebaseConfig = {
   measurementId: "G-3NB50YD8F0"
 };
 
-const app = initializeApp(firebaseConfig);
+  let app;
+  if (!getApps().length) {
+    app = initializeApp(firebaseConfig);
+  } else {
+    app = getApp(); // reuse existing app
+  }
 const db = getFirestore(app);
 
 // --- DOM elements ---
