Adding Auth Pass to Documentaries

--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -8,6 +8,7 @@
 <title> enVision Documentaries </title>
 <link href="css/styleVD.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/indexVD.js"></script>
+<script type="module" src="js/auth-pass.js"></script>
 </head>
     <body>
         <header>
@@ -25,8 +26,8 @@
                     <button type="submit" class="searchButton"> <img src="images/searchIcon.svg"></button>
                     <input type="text" name="query" placeholder="Search...">
                 </form>
-
             </div>
+            <span id="userEmail" style="float:right; margin-right: 2.5%; margin-top: -2%; color:#F36F40; font-size:16px;"></span>
             <h1 class="hero-title"> Your Favourites </h1>
             <div class="favourites">
                 <img src="images/favourite1.png" class="fav1" onclick="location.href='videoPage1.html'" style="cursor: pointer;"/>
