Credentials for Documentaries, and Link to Add video

--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -27,7 +27,8 @@
                     <input type="text" name="query" placeholder="Search...">
                 </form>
             </div>
-            <span id="userEmail" style="float:right; margin-right: 2.5%; margin-top: -2%; color:#F36F40; font-size:16px;"></span>
+            <h3 style="float:right; margin-right: 2.5%; margin-top: -2%; color:#F36F40; font-size:16px;"><a href="creating-video.html" id="createLink">Create Your Video... </a></h3>
+            <span id="userEmail" style="float:right; margin-right: 2%; margin-top: -2%; color:#F36F40; font-size:16px;"></span>
             <h1 class="hero-title"> Your Favourites </h1>
             <div class="favourites">
                 <img src="images/favourite1.png" class="fav1" onclick="location.href='videoPage1.html'" style="cursor: pointer;"/>
