--- a/enVision-Documentaries/videoPage9.html
+++ b/enVision-Documentaries/videoPage9.html
@@ -45,7 +45,8 @@
                                 allowfullscreen>
                         </iframe>
                         <h1 class="title">
-                            Humanities
+                            Languages Overview
+
                         </h1>
                     </div>
                 </div>
@@ -53,7 +54,7 @@
                     <div class="info-header">
                         <div class="category-box">
                             <h2 class="Category">
-                                History
+                                Society & Culture
                             </h2>
                         </div>
                         <div class="views-number">
