--- a/enVision-Documentaries/videoPage.html
+++ b/enVision-Documentaries/videoPage.html
@@ -38,14 +38,14 @@
                         <iframe class="vid" 
                                 width="640" 
                                 height="360" 
-                            src="https://www.youtube.com/embed/HPv0jNN5lwY" 
+                            src="https://www.youtube.com/embed/GARh8N8Ji2s" 
                                 title="Quick Statistics Video" 
                                 frameborder="0" 
                                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                                 allowfullscreen>
                         </iframe>
                         <h1 class="title">
-                            World Economics Brief Look 
+                           Tourism Around The World Overview
                         </h1>
                     </div>
                 </div>
@@ -53,20 +53,20 @@
                     <div class="info-header">
                         <div class="category-box">
                             <h2 class="Category">
-                                Business & Economics
+                                Sports and Entertainment
                             </h2>
                         </div>
                         <div class="views-number">
                             <h2>
-                                751,140
+                                1,005,333
                             </h2>
                         </div>
                     </div>
                     <div class="info-description">
                         <h3>
-                            The Quick Look of Economics of the World provides insight into the systems that power nations and shape global prosperity.<br>
+                            The Overview of Tourism Around the World explores how travel connects cultures, drives economies, and shapes global experiences.<br>
                             <br>
-                            It highlights key industries, trade flows, and the interconnected forces driving the modern economy.
+                            It highlights top destinations, emerging trends, and the ways tourism continues to evolve in the modern era.
                         </h3>
                     </div>
                 </div>
