--- a/enVision-Documentaries/videoPage1.html
+++ b/enVision-Documentaries/videoPage1.html
@@ -53,7 +53,7 @@
                     <div class="info-header">
                         <div class="category-box">
                             <h2 class="Category">
-                                Sports and Entertainment
+                                Lifestyle & Entertainment
                             </h2>
                         </div>
                         <div class="views-number">
