--- a/enVision-Documentaries/videoPage3.html
+++ b/enVision-Documentaries/videoPage3.html
@@ -53,7 +53,7 @@
                     <div class="info-header">
                         <div class="category-box">
                             <h2 class="Category">
-                                History
+                                Society & Culture
                             </h2>
                         </div>
                         <div class="views-number">
