--- a/enVision-Documentaries/videoPage6.html
+++ b/enVision-Documentaries/videoPage6.html
@@ -53,7 +53,7 @@
                     <div class="info-header">
                         <div class="category-box">
                             <h2 class="Category">
-                                Science
+                                Science & Nature
                             </h2>
                         </div>
                         <div class="views-number">
