--- a/enVision-Documentaries/about.html
+++ b/enVision-Documentaries/about.html
@@ -25,7 +25,7 @@
                     <input type="text" name="query" placeholder="Search...">
                 </form>
             </div>
-            <h1 class="hero-title"> About </h1>
+            <h1 class="hero-title title-About"> About </h1>
             <div class="hero">
               <h4> Ideation </h4>
               <p class="ideation-text">
