Improve Responsive Design

--- a/enVision-Documentaries/about.html
+++ b/enVision-Documentaries/about.html
@@ -15,6 +15,7 @@
                 <div class="logo">
                     <img src="images/enVisionO.png">
                 </div>
+                <img src="images/menu.png" id="menu-icon" alt="Menu">
                 <nav>
                     <a href="enVisionDocumentaries.html"> Home </a>
                     <a href="about.html"> About </a>
@@ -33,6 +34,14 @@
               </p>
             </div>
        </header>
+
+        <!-- Hidden menu content -->
+        <div id="mobile-menu">
+            <a href="enVisionDocumentaries.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#contact">Contact</a>
+        </div>
+
        <section class="all">
           <div class="magaz"> 
             <h4> Digital Magazine </h4>
@@ -57,7 +66,7 @@
        </section>
 <!-- Footer -->
 
-<footer id="contact">
+<footer id="contact" class="about-footer">
 <p> Copyright innovi 2022 - 2025 </p>
 <div class="socials">
     <img src="images/facebookHover.png" >
