--- a/enVision-Documentaries/enVisionDocumentaries.html
+++ b/enVision-Documentaries/enVisionDocumentaries.html
@@ -49,7 +49,7 @@
        <section class="allContent">
             <div class="views">
                 <h4> Most Views </h4>
-                <div class="viewsimages">
+                <div class="viewsImages">
                     <img src="images/views1.png" class="views1" onclick="location.href='videoPage6.html'" style="cursor: pointer;"/>
                     <img src="images/views2.png" class="views2" onclick="location.href='videoPage7.html'" style="cursor: pointer;"/>
                     <img src="images/views3.png" class="views3" onclick="location.href='videoPage8.html'" style="cursor: pointer;"/>
@@ -57,7 +57,7 @@
             </div>
             <div class="rates">
                 <h4> Highest Rates </h4>
-                <div class="ratesimages">
+                <div class="ratesImages">
                     <img src="images/rates1.png" class="rates1" onclick="location.href='videoPage9.html'" style="cursor: pointer;"/>
                     <img src="images/rates2.png" class="rates2" onclick="location.href='videoPage10.html'" style="cursor: pointer;"/>
                     <img src="images/rates3.png" class="rates3" onclick="location.href='videoPage11.html'" style="cursor: pointer;"/>
