--- a/enVision-Documentaries/videoPage1.html
+++ b/enVision-Documentaries/videoPage1.html
@@ -28,7 +28,7 @@
             </div>
         <!-- Hidden menu content -->
         <div id="mobile-menu">
-            <a href="enVisionMagazine.html">Home</a>
+            <a href="enVisionDocumentaries.html">Home</a>
             <a href="about.html">About</a>
             <a href="#contact">Contact</a>
         </div>
