--- a/enVision-Documentaries/videos.html
+++ b/enVision-Documentaries/videos.html
@@ -20,7 +20,7 @@
                 <nav>
                     <a href="enVisionDocumentaries.html"> Home </a>
                     <a href="about.html"> About </a>
-                    <a href="videoPage.html"> Vidoes </a>
+                    <a href="videos.html"> Vidoes </a>
                     <a href="#contact"> Contact </a>
                 </nav>
                 <form action="search.html" method="get">
